# api

./: Cargo.toml  README.md
.sqlx/: query-4e4627c872f51fd8140170b953a0f3ea092b0483b58220c12745a8b8d98165bc.json  query-5f3f53f2e685c9ab5cde38cdcd3fb2dc8c4dd3807cf4aa0bcdb227c4d136f818.json  query-8dd0009bcd2eddf7df5c63ffa8f8cea98ea6aa986076d8bf857232a64deeac98.json  query-90431f4d02db31be7993b6b97869b4e6f4d9b39a550e73bdbe10b7c6cc325163.json  query-a447a73b323bde93485a56cfc0801e880e2bcfb0822c7853cdbc19028983693d.json  query-a9b665734e2c9d1f2969bb9811402a5b241730f3106756c2084e66e682f37712.json  query-b06836fa2354bf19a060cd916795c357eaf98ef7def01378da8c9db0b56608b2.json  query-ba1e1aeb016249ccb64514b90bd21886640a4f98284e16b97a5302e75cd03c7a.json  query-bdc83489dabfb5710b80d38b754da8d79f117483993b8fc45ee86b5da77a0f9f.json  query-c3f99c59e91c83020c462a509bbe77a72f06dbf8082a77a16a88378dc4472c43.json
migrations/: 20241225125046_init.sql  20241230202625_init.sql  20241230203014_remove_guild_name.sql  20241230203257_timestamp.sql  20241230203509_commands_ran.sql  20250102142315_tags_id_bye.sql  20250102194324_tags_id_hello_lol.sql
src/: app.rs  config.rs  controllers.rs  lib.rs  middleware.rs  router.rs  util.rs
src/config/: server.rs
src/controllers/: guilds.rs  site_metadata.rs  tags.rs  users.rs  util.rs
src/controllers/guilds/: create.rs  delete.rs  metadata.rs  update.rs
src/controllers/tags/: create.rs  metadata.rs  user.rs
src/controllers/users/: create.rs  metadata.rs
src/database/: client.rs  mod.rs  operations.rs
src/middleware/: simple_auth.rs
src/util/: errors.rs  tracing.rs
src/util/errors/: json.rs
